# powerdns-cli

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  renovate.json5  testfile
.github/workflows/: integration.yml  lint.yml  pr-format.yml  python-publish.yml  release.yml  tests.yml  unit.yml
integration/: import-autoprimary.json  import-cryptokey.json  import-metadata.json  import-network.json  import-record.json  import-tsigkey.json  import-view.json  import-zone.json  pdns.conf
powerdns_cli/: autoprimary.py  cli_logging.py  main.py  powerdns_cli.py  utils.py  validation.py
powerdns_cli/commands/: autoprimary.py  config.py  cryptokey.py  metadata.py  network.py  record.py  tsigkey.py  view.py  zone.py
powerdns_cli/utils/: logger.py  main.py  validation.py
tests/: test_autoprimary.py  test_config.py  test_cryptokey.py  test_meta.py  test_metadata.py  test_network.py  test_record.py  test_tsigkey.py  test_utils_logging.py  test_utils_main.py  test_utils_validation.py  test_validation.py  test_view.py  test_zone.py
tests/powerdns_cli_test_utils/: testutils.py
